Removed the old "snakes zipped" folder